--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+  
+<head>
+<link rel="stylesheet" type="text/css" href="mystyle.css">  
+</head>
 <div>
 <h1>Steps to host a static website in github</h1>
 <ol>
