Add class information for list in index page.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <div>
 <h1>Steps to host a static website in github</h1>
-<ol>
+<ol class="a">
 <li>Register in github</li>
 
 <li>If registered, SignIn to github</li>
